runners/services: Do not match categories for short queries

Otherwise, one can get unexpected results for substring-matches.
Apart from the matches not being relevant, this is confusing, because the category is not visible to the user

BUG: 469769